--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuetify": "^3.3.12"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
